refactor mikarrega-site

--- a/css/main.css
+++ b/css/main.css
@@ -214,7 +214,7 @@ p {
 .card-deposition {
   width: 100%;
   max-width: 38.4rem;
-  height: 40.9rem;
+  max-height: 55rem;
   background: rgba(241, 240, 245, 0.55);
   border-radius: 8px;
   padding: 3.7rem 3.2rem 2rem 3.2rem;
