--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,11 +1,11 @@
-@import 'mixins';
-@import 'reset';
-@import 'variables';
-@import 'animates';
-@import 'typography';
-@import 'buttons';
-@import 'components';
-@import 'grid';
-@import 'header';
-@import 'footer';
-@import 'home';
+@use 'mixins' as *;
+@use 'reset';
+@use 'variables';
+@use 'animates';
+@use 'typography';
+@use 'buttons';
+@use 'components';
+@use 'grid';
+@use 'header';
+@use 'footer';
+@use 'home';
